<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listing_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:duration="@android:integer/config_shortAnimTime"
    tools:context=".fragments.ListingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/detailed_listing_images"
                android:layout_width="match_parent"
                android:layout_height="@dimen/carousel_view_height"
                android:layout_margin="@dimen/space_none"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_launcher_background"
                android:contentDescription="@string/listing_image_content_description"
                android:scaleType="centerInside"
                app:fillColor="@color/colorSection"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:pageColor="@color/colorTransparent"
                app:slideInterval="@integer/carousel_interval"
                app:strokeColor="@color/carousel_stroke"
                app:strokeWidth="@dimen/carousel_stroke_width" />

            <androidx.cardview.widget.CardView
                android:id="@+id/detailed_listing_top_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/space_medium"
                android:paddingTop="@dimen/space_medium"
                android:paddingEnd="@dimen/space_medium"
                app:cardElevation="@dimen/space_medium"
                app:cardPreventCornerOverlap="false"
                app:layout_constraintBottom_toTopOf="@+id/detailed_listing_details_section"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailed_listing_images">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_large"
                    android:layout_marginTop="@dimen/space_large"
                    android:layout_marginEnd="@dimen/space_large"
                    android:layout_marginBottom="@dimen/space_large"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detailed_listing_title"
                        style="@style/TitleListing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_listing_title"
                        tools:ignore="SelectableText" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_medium"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/detailed_listing_starting_price"
                            style="@style/ListingStartingBid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder_starting_big"
                            tools:ignore="SelectableText" />

                        <TextView
                            android:id="@+id/starting_bid_title"
                            style="@style/Tagline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/starting_bid_title"
                            tools:ignore="SelectableText" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/detailed_listing_details_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                android:background="@color/colorSection"
                android:paddingStart="@dimen/space_medium"
                android:paddingTop="@dimen/space_medium"
                android:paddingEnd="@dimen/space_medium"
                android:paddingBottom="@dimen/space_large"
                app:cardElevation="@dimen/space_medium"
                app:cardPreventCornerOverlap="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailed_listing_top_section">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_large"
                    android:layout_marginTop="@dimen/space_large"
                    android:layout_marginEnd="@dimen/space_large"
                    android:layout_marginBottom="@dimen/space_large"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detailed_listing_asking_price"
                        style="@style/SectionTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/seller_section_title"
                        tools:ignore="SelectableText" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_medium"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/member_nickname"
                            style="@style/Nickname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder_nickname"
                            tools:ignore="SelectableText" />

                        <TextView
                            android:id="@+id/member_location"
                            style="@style/Tagline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder_location"
                            tools:ignore="SelectableText" />

                        <TextView
                            android:id="@+id/member_feedback"
                            style="@style/Feedback"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/space_large"
                            android:text="@string/placeholder_feedback"
                            tools:ignore="SelectableText" />

                        <TextView
                            style="@style/Tagline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/feedback_title" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>